--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Governor-Bradford-s-first-dialogue-b-A-dialogue-or-the-sum-of-a-conference-between-some-young__70443
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70443-h/images/cover.jpg
 creator:
   author:
     agent_name: Bradford, William
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/26830
     wikipedia: https://en.wikipedia.org/wiki/William_Bradford_(governor)
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70443#Governor-Bradford-s-first-dialogue-b-A-dialogue-or-the-sum-of-a-conference-between-some-young_
 gutenberg_issued: '2023-04-02'
 identifiers:
   gutenberg: '70443'
